fix smooth scrolling on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,10 @@
   box-sizing: border-box;
 }
 
+* {
+  -webkit-overflow-scrolling: touch;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
